Bug 399352: Get rid of known-but-harmless assertions for GetUsedMargin/Border/Padding. r/sr=dbaron